09_traefik/02_traefik_with_certificates/test-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld
  annotations:
    kubernetes.io/ingress.class: "traefik"
    # traefik.frontend.passHostHeader: "true"
    # traefik.backend.loadbalancer.sticky: "true"
    cert-manager.io/acme-challenge-type: http01
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  rules:
    - host: demo.p82.it
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: test-service
                port:
                  number: 80
  tls: # < placing a host in the TLS config will indicate a certificate should be created
    - hosts:
        - demo.p82.it
      secretName: myingress-cert # < cert-manager will store the created certificate in this secret.
